@@ -164,10 +164,7 @@ class Mp3Reader(object):
 		marker = self._mp3_stream.read(4)
 		(sync,) = BE_SHORT.unpack(marker[:2])
 		main_size = end_meta_data_offset - begin_main_content
-		if sync & 0xFFE0 == 0xFFE0 or marker == "RIFF":
-			mp3_data_block = Block(main_size, "MP3", begin_main_content)
-			self.blocks.append(mp3_data_block)
-		else: # SRS data blocks
+		if marker[:3] == "SRS": # SRS data blocks
 			cur_pos = begin_main_content
 			while(cur_pos < begin_main_content + main_size):
 				self._mp3_stream.seek(cur_pos, os.SEEK_SET)
@@ -175,10 +172,7 @@ class Mp3Reader(object):
 				try:
 					marker = self._mp3_stream.read(4)
 					# size includes the 8 bytes header
-					if marker == "fLaC": # FLAC with ID3 tags
-						size = end_meta_data_offset - cur_pos
-					else:
-						(size,) = S_LONG.unpack(self._mp3_stream.read(4))
+					(size,) = S_LONG.unpack(self._mp3_stream.read(4))
 				except:
 					raise InvalidDataException("Not enough SRS data")
 				srs_block = Block(size, marker, cur_pos)
@@ -186,7 +180,16 @@ class Mp3Reader(object):
 				cur_pos += size
 				if size == 0:
 					raise InvalidDataException("SRS size field is zero")
-			
+				if size > begin_main_content + main_size:
+					raise InvalidDataException("Broken SRS")
+		elif sync & 0xFFE0 == 0xFFE0 or marker == "RIFF":
+			mp3_data_block = Block(main_size, "MP3", begin_main_content)
+			self.blocks.append(mp3_data_block)
+		else:
+			print("WARNING: MP3 file is not valid!")
+			data_block = Block(main_size, "MP3", begin_main_content)
+			self.blocks.append(data_block)
+						
 		# the order of which we add blocks doesn't matter this way
 		self.blocks.sort(key=lambda block: block.start_pos)
 			
